// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date > 42 > anytime > with only Date refDate 1`] = `2020-11-22T03:05:50.087Z`;

exports[`date > 42 > anytime > with only number refDate 1`] = `2020-11-22T03:05:50.087Z`;

exports[`date > 42 > anytime > with only string refDate 1`] = `2020-11-22T03:05:50.087Z`;

exports[`date > 42 > between > with Date dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > 42 > between > with mixed dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > 42 > between > with string dates 1`] = `2021-03-15T19:30:57.115Z`;

exports[`date > 42 > betweens > with Date dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with Date dates and count 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-15T19:30:57.115Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with Date dates and count range 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with mixed dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with string dates 1`] = `
[
  2021-03-15T19:30:57.115Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > betweens > with string dates and count 1`] = `
[
  2021-03-02T22:04:55.366Z,
  2021-03-15T19:30:57.115Z,
  2021-03-29T00:52:30.236Z,
  2021-04-05T21:40:57.332Z,
  2021-04-18T19:23:52.947Z,
]
`;

exports[`date > 42 > birthdate > with age and refDate 1`] = `1980-07-08T10:07:32.899Z`;

exports[`date > 42 > birthdate > with age range and refDate 1`] = `1962-12-28T11:14:48.171Z`;

exports[`date > 42 > birthdate > with only refDate 1`] = `1963-09-27T21:11:22.547Z`;

exports[`date > 42 > birthdate > with year 1`] = `2000-05-16T22:59:36.655Z`;

exports[`date > 42 > birthdate > with year range 1`] = `1937-10-30T15:52:21.843Z`;

exports[`date > 42 > future > with only Date refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > 42 > future > with only number refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > 42 > future > with only string refDate 1`] = `2021-07-08T10:07:33.524Z`;

exports[`date > 42 > future > with value 1`] = `2024-11-19T18:52:08.216Z`;

exports[`date > 42 > month > noArgs 1`] = `"January"`;

exports[`date > 42 > month > with abbreviated = true 1`] = `"Jan"`;

exports[`date > 42 > month > with abbreviated = true and context = true 1`] = `"Jan"`;

exports[`date > 42 > month > with context = true 1`] = `"January"`;

exports[`date > 42 > past > with only Date refDate 1`] = `2020-07-08T10:07:32.524Z`;

exports[`date > 42 > past > with only number refDate 1`] = `2020-07-08T10:07:32.524Z`;

exports[`date > 42 > past > with only string refDate 1`] = `2020-07-08T10:07:32.524Z`;

exports[`date > 42 > past > with value 1`] = `2014-11-22T18:52:07.216Z`;

exports[`date > 42 > recent > with only Date refDate 1`] = `2021-02-21T02:08:35.603Z`;

exports[`date > 42 > recent > with only number refDate 1`] = `2021-02-21T02:08:35.603Z`;

exports[`date > 42 > recent > with only string refDate 1`] = `2021-02-21T02:08:35.603Z`;

exports[`date > 42 > recent > with value 1`] = `2021-02-15T11:02:37.999Z`;

exports[`date > 42 > soon > with only Date refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > 42 > soon > with only number refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > 42 > soon > with only string refDate 1`] = `2021-02-22T02:08:36.603Z`;

exports[`date > 42 > soon > with value 1`] = `2021-02-25T11:02:38.999Z`;

exports[`date > 42 > timeZone 1`] = `"America/North_Dakota/Center"`;

exports[`date > 42 > weekday > noArgs 1`] = `"Saturday"`;

exports[`date > 42 > weekday > with abbreviated = true 1`] = `"Sat"`;

exports[`date > 42 > weekday > with abbreviated = true and context = true 1`] = `"Sat"`;

exports[`date > 42 > weekday > with context = true 1`] = `"Saturday"`;

exports[`date > 1211 > anytime > with only Date refDate 1`] = `2021-12-31T12:49:38.858Z`;

exports[`date > 1211 > anytime > with only number refDate 1`] = `2021-12-31T12:49:38.858Z`;

exports[`date > 1211 > anytime > with only string refDate 1`] = `2021-12-31T12:49:38.858Z`;

exports[`date > 1211 > between > with Date dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > between > with mixed dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > between > with string dates 1`] = `2021-04-17T11:58:13.327Z`;

exports[`date > 1211 > betweens > with Date dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with Date dates and count 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > 1211 > betweens > with Date dates and count range 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-03T02:52:39.944Z,
  2021-04-15T10:20:25.794Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > 1211 > betweens > with mixed dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with string dates 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
]
`;

exports[`date > 1211 > betweens > with string dates and count 1`] = `
[
  2021-03-07T00:34:12.745Z,
  2021-04-02T08:42:57.721Z,
  2021-04-15T10:20:25.794Z,
  2021-04-17T11:58:13.327Z,
  2021-04-21T13:18:14.822Z,
]
`;

exports[`date > 1211 > birthdate > with age and refDate 1`] = `1981-01-26T14:59:27.285Z`;

exports[`date > 1211 > birthdate > with age range and refDate 1`] = `1996-10-13T03:27:03.813Z`;

exports[`date > 1211 > birthdate > with only refDate 1`] = `1998-08-21T23:07:26.960Z`;

exports[`date > 1211 > birthdate > with year 1`] = `2000-12-04T01:16:03.291Z`;

exports[`date > 1211 > birthdate > with year range 1`] = `1993-10-11T07:45:00.030Z`;

exports[`date > 1211 > future > with only Date refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > 1211 > future > with only number refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > 1211 > future > with only string refDate 1`] = `2022-01-26T14:59:27.356Z`;

exports[`date > 1211 > future > with value 1`] = `2030-06-03T19:31:11.518Z`;

exports[`date > 1211 > month > noArgs 1`] = `"September"`;

exports[`date > 1211 > month > with abbreviated = true 1`] = `"Sep"`;

exports[`date > 1211 > month > with abbreviated = true and context = true 1`] = `"Sep"`;

exports[`date > 1211 > month > with context = true 1`] = `"September"`;

exports[`date > 1211 > past > with only Date refDate 1`] = `2021-01-26T14:59:26.356Z`;

exports[`date > 1211 > past > with only number refDate 1`] = `2021-01-26T14:59:26.356Z`;

exports[`date > 1211 > past > with only string refDate 1`] = `2021-01-26T14:59:26.356Z`;

exports[`date > 1211 > past > with value 1`] = `2020-06-05T19:31:10.518Z`;

exports[`date > 1211 > recent > with only Date refDate 1`] = `2021-02-21T15:26:18.924Z`;

exports[`date > 1211 > recent > with only number refDate 1`] = `2021-02-21T15:26:18.924Z`;

exports[`date > 1211 > recent > with only string refDate 1`] = `2021-02-21T15:26:18.924Z`;

exports[`date > 1211 > recent > with value 1`] = `2021-02-20T23:59:56.196Z`;

exports[`date > 1211 > soon > with only Date refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with only number refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with only string refDate 1`] = `2021-02-22T15:26:19.924Z`;

exports[`date > 1211 > soon > with value 1`] = `2021-03-02T23:59:57.196Z`;

exports[`date > 1211 > timeZone 1`] = `"Pacific/Fiji"`;

exports[`date > 1211 > weekday > noArgs 1`] = `"Wednesday"`;

exports[`date > 1211 > weekday > with abbreviated = true 1`] = `"Wed"`;

exports[`date > 1211 > weekday > with abbreviated = true and context = true 1`] = `"Wed"`;

exports[`date > 1211 > weekday > with context = true 1`] = `"Wednesday"`;

exports[`date > 1337 > anytime > with only Date refDate 1`] = `2020-08-31T23:49:36.013Z`;

exports[`date > 1337 > anytime > with only number refDate 1`] = `2020-08-31T23:49:36.013Z`;

exports[`date > 1337 > anytime > with only string refDate 1`] = `2020-08-31T23:49:36.013Z`;

exports[`date > 1337 > between > with Date dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > 1337 > between > with mixed dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > 1337 > between > with string dates 1`] = `2021-03-09T04:11:24.661Z`;

exports[`date > 1337 > betweens > with Date dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > 1337 > betweens > with Date dates and count 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
  2021-03-12T15:42:07.228Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > 1337 > betweens > with Date dates and count range 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-10T02:59:27.388Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > 1337 > betweens > with mixed dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > 1337 > betweens > with string dates 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
]
`;

exports[`date > 1337 > betweens > with string dates and count 1`] = `
[
  2021-03-03T01:51:22.487Z,
  2021-03-09T04:11:24.661Z,
  2021-03-10T02:59:27.388Z,
  2021-03-12T15:42:07.228Z,
  2021-03-20T19:33:45.512Z,
]
`;

exports[`date > 1337 > birthdate > with age and refDate 1`] = `1980-05-28T08:29:25.862Z`;

exports[`date > 1337 > birthdate > with age range and refDate 1`] = `1956-02-16T14:59:18.918Z`;

exports[`date > 1337 > birthdate > with only refDate 1`] = `1956-08-25T21:39:39.221Z`;

exports[`date > 1337 > birthdate > with year 1`] = `2000-04-06T02:45:32.287Z`;

exports[`date > 1337 > birthdate > with year range 1`] = `1926-06-20T07:18:01.782Z`;

exports[`date > 1337 > future > with only Date refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > 1337 > future > with only number refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > 1337 > future > with only string refDate 1`] = `2021-05-28T08:29:26.600Z`;

exports[`date > 1337 > future > with value 1`] = `2023-10-06T02:30:57.962Z`;

exports[`date > 1337 > month > noArgs 1`] = `"February"`;

exports[`date > 1337 > month > with abbreviated = true 1`] = `"Feb"`;

exports[`date > 1337 > month > with abbreviated = true and context = true 1`] = `"Feb"`;

exports[`date > 1337 > month > with context = true 1`] = `"February"`;

exports[`date > 1337 > past > with only Date refDate 1`] = `2020-05-28T08:29:25.600Z`;

exports[`date > 1337 > past > with only number refDate 1`] = `2020-05-28T08:29:25.600Z`;

exports[`date > 1337 > past > with only string refDate 1`] = `2020-05-28T08:29:25.600Z`;

exports[`date > 1337 > past > with value 1`] = `2013-10-08T02:30:56.962Z`;

exports[`date > 1337 > recent > with only Date refDate 1`] = `2021-02-20T23:26:34.381Z`;

exports[`date > 1337 > recent > with only number refDate 1`] = `2021-02-20T23:26:34.381Z`;

exports[`date > 1337 > recent > with only string refDate 1`] = `2021-02-20T23:26:34.381Z`;

exports[`date > 1337 > recent > with value 1`] = `2021-02-14T08:02:24.768Z`;

exports[`date > 1337 > soon > with only Date refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with only number refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with only string refDate 1`] = `2021-02-21T23:26:35.381Z`;

exports[`date > 1337 > soon > with value 1`] = `2021-02-24T08:02:25.768Z`;

exports[`date > 1337 > timeZone 1`] = `"America/Guadeloupe"`;

exports[`date > 1337 > weekday > noArgs 1`] = `"Monday"`;

exports[`date > 1337 > weekday > with abbreviated = true 1`] = `"Mon"`;

exports[`date > 1337 > weekday > with abbreviated = true and context = true 1`] = `"Mon"`;

exports[`date > 1337 > weekday > with context = true 1`] = `"Monday"`;
